--- a/team-central-dashboard/env/.env.local
+++ b/team-central-dashboard/env/.env.local
@@ -17,6 +17,8 @@ TEAMS_APP_PACKAGE_PATH=
 FUNC_NAME=
 FUNC_ENDPOINT=
 DOTNET_PATH=
+TEAMS_APP_TENANT_ID=
+TEAMS_APP_UPDATE_TIME=
 
 # Generated during deploy, you can also add your own variables.
 SSL_CRT_FILE=
