--- a/live-share-dice-roller/env/.env.local
+++ b/live-share-dice-roller/env/.env.local
@@ -3,12 +3,12 @@ TEAMSFX_ENV=local
 TEAMS_APP_NAME=live-share-dice-roller-local
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
-TAB_DOMAIN=localhost:3000
-TAB_ENDPOINT=https://localhost:3000
+TAB_DOMAIN=
+TAB_ENDPOINT=
 TEAMS_APP_ID=
 TEAMS_APP_PACKAGE_PATH=
 
-# Generated during deploy, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
+# Generated during deploy, you can also add your own variables.
 SSL_CRT_FILE=
 SSL_KEY_FILE=
 
