--- a/live-share-dice-roller/teamsapp.local.yml
+++ b/live-share-dice-roller/teamsapp.local.yml
@@ -15,11 +15,11 @@ provision:
   - uses: script # Set TAB_DOMAIN for local launch
     name: Set TAB_DOMAIN for local launch
     with:
-      run: echo "set-teamsfx-env TAB_DOMAIN=localhost:3000"
+      run: echo "::set-teamsfx-env TAB_DOMAIN=localhost:3000"
   - uses: script # Set TAB_ENDPOINT for local launch
     name: Set TAB_ENDPOINT for local launch
     with:
-      run: echo "set-teamsfx-env TAB_ENDPOINT=https://localhost:3000"
+      run: echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:3000"
   - uses: teamsApp/validateManifest
     with:
       manifestPath: ./manifest/manifest.json # Path to manifest template
@@ -39,9 +39,9 @@ deploy:
     with:
       devCert:
         trust: true
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # SSL_CRT_FILE: certificate file
-    # SSL_KEY_FILE: certificate key
+    writeToEnvironmentFile: 
+      sslCertFile:  SSL_CRT_FILE
+      sslKeyFile:  SSL_KEY_FILE
 
   - uses: cli/runNpmCommand # Run npm command
     with:
